--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,7 @@
     width:400px;
     height: 400px;
     display: inline-block;
-    font-size: 12px;
+    font-size: 12px;;
 }
 
 #barChart {
@@ -21,7 +21,7 @@
 }
 
 .slice {
-    font-size: 13px;
+    font-size: 8px;
     font-family: Verdana;
     fill: white;
     font-weight: bold;   
