--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 {% block content %}
-<div id="pieChart"></div>
-<div id="barChart"></div>  
-{% endblock content %}
+  
+{% endblock content %} -->
