--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Data Dashboard">
+    <meta name="author" content="Aboze Brain">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Data Dashboard</title>
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
