--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,6 @@
     <script src="{{ url_for('static', filename='js/pieChart.js') }}"></script>
     <script src="{{ url_for('static', filename='js/barChart.js') }}"></script>
     <script src="{{ url_for('static', filename='js/updateChart.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
   </body>
 </html>
