--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     </script>
     <script src="{{ url_for('static', filename='js/pieChart.js') }}"></script>
     <script src="{{ url_for('static', filename='js/barChart.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/updateChart.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/updateBarChart.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
   </body>
 </html>
